--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,6 @@ jobs:
       run: |
         pytest --verbose --cov=. --cov-report=term-missing
     
-    - name: Test with pytest
-      run: |
-        pytest
+#    - name: Test with pytest
+#      run: |
+#        pytest
